--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "cheerio": "1.0.0-rc.11",
     "dotenv": "^16.0.1",
-    "express": "^4.18.0",
+    "fastify": "^4.1.0",
     "got": "11.8.3",
     "pg": "^8.7.3"
   }
