--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es2017",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true,
+    "sourceMap": false,
     "module": "commonjs",
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -14,6 +14,13 @@
     "outDir": "./build",
     "rootDir": "."
   },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "tests"
+  ],
   "ts-node": {
     "transpileOnly": true,
     "files": true,
