--- a/package.json
+++ b/package.json
@@ -7,41 +7,63 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
+    "start": "pnpm cross-env NODE_ENV=production nodemon build/src/index.js",
+    "dev:ts": "pnpm cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only --exit-child src/index.ts",
+    "dev:js": "concurrently -k \"pnpm tsc --watch\" \"pnpm cross-env NODE_ENV=development nodemon './build/src/index.js'\"",
     "test": "jest --watchAll --coverage --verbose",
-    "start": "ts-node-dev --respawn --transpile-only --exit-child src/index.ts",
     "build": "pnpm tsc",
-    "dev": "concurrently -k \"pnpm tsc --watch\" \"nodemon build/src/index.js\"",
-    "ndev": "nodemon --watch './src/*.ts' --exec 'ts-node' src/index.ts",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "typeorm:cli": "ts-node --transpile-only ./node_modules/typeorm/cli.js",
-    "migration:generate": "pnpm run typeorm:cli migration:generate",
+    "typeorm:cli": "pnpm cross-env NODE_ENV=development ts-node --transpile-only ./node_modules/typeorm/cli.js",
+    "migration:generate": "NODE_ENV=development pnpm run typeorm:cli migration:generate",
     "migration:create": "pnpm run typeorm:cli migration:create",
     "migration:run": "pnpm run typeorm:cli migration:run",
     "migration:revert": "pnpm run typeorm:cli migration:revert"
   },
   "dependencies": {
+    "@types/html-to-text": "^8.1.0",
     "cheerio": "1.0.0-rc.12",
     "config": "^3.3.7",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.17.2",
     "got": "^12.1.0",
+    "html-to-text": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.6",
     "pg": "^8.4.0",
+    "pug": "^3.0.2",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "typeorm": "0.3.6",
     "zod": "^3.17.3"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
     "@types/cheerio": "^0.22.31",
     "@types/config": "^0.0.41",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.10",
+    "@types/nodemailer": "^6.4.4",
     "@types/pg": "^8.6.5",
+    "@types/pug": "^2.0.6",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
+    "@types/swagger-ui": "^3.52.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.2.2",
+    "cross-env": "^7.0.3",
     "jest": "^28.1.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.18",
+    "openapi-types": "^12.0.0",
     "ts-jest": "^28.0.5",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
