--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
+    "production": "NODE_ENV=production node ./src/index.js",
     "start": "pnpm cross-env NODE_ENV=production nodemon build/src/index.js",
     "dev:ts": "pnpm cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only --exit-child src/index.ts",
     "dev:js": "concurrently -k \"pnpm tsc --watch\" \"pnpm cross-env NODE_ENV=development nodemon './build/src/index.js'\"",
@@ -19,7 +20,8 @@
     "migration:revert": "pnpm run typeorm:cli migration:revert"
   },
   "dependencies": {
-    "@types/html-to-text": "^8.1.0",
+    "@sentry/node": "^7.5.0",
+    "@sentry/tracing": "^7.5.0",
     "cheerio": "1.0.0-rc.12",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
@@ -38,6 +40,9 @@
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "0.3.6",
+    "winston": "^3.8.1",
+    "winston-express": "^0.1.1",
+    "winston-loggly-bulk": "^3.2.1",
     "zod": "^3.17.3"
   },
   "devDependencies": {
@@ -47,6 +52,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/html-to-text": "^8.1.0",
     "@types/jest": "^28.1.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.3",
