--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,9 @@
   "keywords": [],
   "main": "index.js",
   "scripts": {
-    "start:docker": "pnpm run build && pnpm run start",
+    "build": "pnpm rimraf ./build && pnpm tsc",
     "start": "pnpm cross-env NODE_ENV=production node build/src/index.js",
-    "build": "pnpm rimraf ./build && pnpm swc ./src -d ./build",
+    "stage": "pnpm cross-env NODE_ENV=staging node build/src/index.js",
     "dev": "pnpm cross-env NODE_ENV=development ts-node-dev --respawn --transpile-only --exit-child src/index.ts",
     "test": "jest --watchAll --coverage --verbose",
     "typeorm:cli": "pnpm cross-env NODE_ENV=development ts-node --transpile-only ./node_modules/typeorm/cli.js",
@@ -23,17 +23,20 @@
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "express": "^4.18.1",
     "got": "^12.1.0",
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "pg": "^8.7.3",
     "pug": "^3.0.2",
     "redis": "^4.2.0",
     "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0",
     "typeorm": "0.3.6",
@@ -43,8 +46,6 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.210",
     "@types/body-parser": "^1.19.2",
     "@types/cheerio": "^0.22.31",
     "@types/config": "^0.0.41",
@@ -64,15 +65,15 @@
     "@types/swagger-ui": "^3.52.0",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.2.2",
-    "cross-env": "^7.0.3",
     "jest": "^28.1.2",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "openapi-types": "^12.0.0",
-    "rimraf": "^3.0.2",
     "ts-jest": "^28.0.5",
     "ts-node": "10.7.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.5.2"
+  },
+  "volta": {
+    "node": "18.5.0"
   }
 }
