Finalizing Monitoring And Logging

--- a/monitoring/prometheus/Dockerfile
+++ b/monitoring/prometheus/Dockerfile
@@ -1,5 +1,5 @@
-FROM prom/prometheus:latest
+FROM prom/prometheus:v2.36.2
 
 WORKDIR /etc/prometheus
 
-COPY prometheus.yml ./
+COPY prometheus.yml alert.rules ./
