--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "migration:revert": "pnpm run typeorm:cli migration:revert"
   },
   "dependencies": {
+    "@jest/types": "^28.1.3",
     "cheerio": "1.0.0-rc.12",
     "config": "^3.3.7",
     "cookie-parser": "^1.4.6",
