--- a/monitoring/grafana/provisioning/datasources/datasource.yml
+++ b/monitoring/grafana/provisioning/datasources/datasource.yml
@@ -7,5 +7,13 @@ datasources:
     orgId: 1
     url: http://prometheus:9090
     basicAuth: false
+    isDefault: false
+    editable: true
+  - name: Loki
+    type: loki
+    access: proxy
+    orgId: 1
+    url: http://loki:3100
+    basicAuth: false
     isDefault: true
     editable: true
