--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,8 +13,12 @@ volumes:
   Loki: {}
   LokiData: {}
   Promtail: {}
+  ConsulConfig: {}
+  ConsulData: {}
+  Vault: {}
 
 networks:
+  test:
   monitor-net:
     driver: bridge
 
@@ -247,7 +251,7 @@ services:
 ### v2.3.0
   caddy:
     build:
-      context: ./ssl/caddy
+      context: ./system/caddy
       dockerfile: Dockerfile
     container_name: caddy
     ports:
@@ -269,4 +273,42 @@ services:
     labels:
       org.label-schema.group: "System"
 
+### v1.5.0
+  vault:
+    build: 
+      context: ./system/secrets/vault
+      dockerfile: Dockerfile
+    container_name: vault
+    ports:
+      - 8200:8200
+    volumes:
+      - Vault:/vault
+    environment:
+      - VAULT_ADDR=http://127.0.0.1:8200
+    command: server
+    cap_add:
+      - IPC_LOCK
+    depends_on:
+      - consul
+    networks:
+      - test
+
+### v1.8.2
+  consul:
+    build: 
+      context: ./system/secrets/consul
+      dockerfile: Dockerfile
+    container_name: consul
+    ports:
+      - 8500:8500
+    environment:
+      - CONSUL_BIND_INTERFACE=eth0
+      - CONSUL_CLIENT_INTERFACE=eth0
+      - CONSUL_ALLOW_PRIVILEGED_PORTS=
+    command: agent -server -bootstrap-expect 1
+    volumes:
+      - ConsulConfig:/consul/config
+      - ConsulData:/consul/data
+    networks:
+      - test
 ################################################################################################################
