Configuring Nginx Exporter

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -155,6 +155,21 @@ services:
     labels:
       org.label-schema.group: "monitoring"
 
+### 0.10
+  nginxexporter:
+    image: nginx/nginx-prometheus-exporter:0.10
+    container_name: nginx-exporter
+    expose:
+      - 9113
+    command: 
+      - -nginx.scrape-uri
+      - http://nginx:8081/stub_status ### Docker 0 ip address, cmd: $ ip addr show docker0
+    restart: unless-stopped
+    networks:
+      - monitor-net
+    labels:
+      org.label-schema.group: "monitoring"
+
 ################################################## Logging ######################################################
 ### v2.5.0
   loki:
@@ -191,7 +206,6 @@ services:
       - /var/lib/docker/containers:/var/lib/docker/containers
     expose:
       - 9080
-      # - 1514
     ports:
       - protocol: tcp
         published: 1514
@@ -313,16 +327,18 @@ services:
     networks:
       - test
 
+### v1.23.0-alpine
   nginx:
     build: 
       context: ./system/nginx
       dockerfile: Dockerfile
-    image: nginx:1.17.10
     container_name: nginx
     ports:
       - "5000:80"
       - "3000:3000"
       - "3100:3100"
+      - "8081:8081"
+
     volumes:
       - Nginx:/etc/nginx
     networks:
