--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -22,17 +22,22 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['cadvisor:8080']
-
+  
   - job_name: 'prometheus'
     scrape_interval: 10s
     static_configs:
       - targets: ['localhost:9090']
-
+  
   - job_name: 'pushgateway'
     scrape_interval: 10s
     honor_labels: true
     static_configs:
       - targets: ['pushgateway:9091']
+  
+  - job_name: 'nginx'
+    scrape_interval: 10s
+    static_configs:
+      - targets: ['nginxexporter:9113']
 
 
 alerting:
@@ -42,10 +47,6 @@ alerting:
     - targets: 
       - 'alertmanager:9093'
 
-#  - job_name: 'nginx'
-#    scrape_interval: 10s
-#    static_configs:
-#      - targets: ['nginxexporter:9113']
 
 #  - job_name: 'aspnetcore'
 #    scrape_interval: 10s
